# blog-vscode-template

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LICENSE  README-Linux.md  README-Windows.md  README-macOS.md  README.md  widget.ui
.github/workflows/: build.yml
